unpackaged/main/default/objects/Opportunity/fields/Service_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Price__c</fullName>
    <label>Service Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>