unpackaged/main/default/objects/Opportunity/fields/Service_Estimate_No__c.field-meta.xml
<CustomField>
    <fullName>Service_Estimate_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Estimate No</label>
    <length>225</length>
    <type>Text</type>
</CustomField>