unpackaged/main/default/objects/Opportunity/fields/Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>