unpackaged/main/default/objects/Opportunity/fields/Service_Request_Message__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Request Message</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>