unpackaged/main/default/objects/Opportunity/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>CASE(TEXT(ETSALES_GL_Services__c), &#39;Private School&#39;, &#39;Education&#39;, &#39;Government School&#39;, &#39;Education&#39;, &#39;Quran Studies&#39;, &#39;Education&#39;,&#39;University&#39;, &#39;Education&#39;,RecordType.Name)</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>