unpackaged/main/default/objects/Opportunity/fields/Symptom_Type__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Symptom Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>