unpackaged/main/default/objects/Opportunity/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Symptoms</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>