unpackaged/main/default/objects/Opportunity/fields/Test_Drive_Booked__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Drive Booked?</label>
    <type>Checkbox</type>
</CustomField>