unpackaged/main/default/objects/Opportunity/fields/Trade_In_Buying_Price__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Buying_Price__c</fullName>
    <label>Trade-In Buying Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>