unpackaged/main/default/objects/Opportunity/fields/Trade_In_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Inspection_Status__c</fullName>
    <label>Trade-In Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>