unpackaged/main/default/objects/Opportunity/fields/Trade_In_Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Vehicle_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade-In Vehicle Brand</label>
    <referenceTo>Vehicle_Brand_Master__c</referenceTo>
    <relationshipLabel>Opportunities (Trade-In Vehicle Brand)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>