unpackaged/main/default/objects/Opportunity/fields/Trade_In_Vehicle_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Vehicle_Mileage__c</fullName>
    <label>Trade-In Vehicle Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>