unpackaged/main/default/objects/Opportunity/fields/Trade_In_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Vehicle_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade-In Vehicle Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vehicle_Model_Master__c.Vehicle_Brand__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trade_In_Vehicle_Brand__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vehicle_Model_Master__c</referenceTo>
    <relationshipLabel>Opportunities (Trade-In Vehicle Model)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>