unpackaged/main/default/objects/Opportunity/fields/TRN__c.field-meta.xml
<CustomField>
    <fullName>TRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TRN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>