unpackaged/main/default/objects/Opportunity/fields/Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Valid_Till__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid Till</label>
    <type>Date</type>
</CustomField>