unpackaged/main/default/objects/Opportunity/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vat</label>
    <length>225</length>
    <type>Text</type>
</CustomField>