unpackaged/main/default/objects/Opportunity/fields/Vehicle_Kms__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Kms__c</fullName>
    <formula>Vehicle_Sales_Inventory__r.ETM_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Kms</label>
    <type>Text</type>
</CustomField>