unpackaged/main/default/objects/Opportunity/fields/Vehicle_Mileage_number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Mileage_number__c</fullName>
    <label>ET Vehicle Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>