unpackaged/main/default/objects/Opportunity/fields/Vehicle_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>