unpackaged/main/default/objects/Opportunity/fields/Vehicle_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Order Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>