unpackaged/main/default/objects/Opportunity/fields/Vehicle_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Plate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Plate Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>