unpackaged/main/default/objects/Opportunity/fields/Vehicle_Receiving_Info__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Receiving_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Receiving form</label>
    <referenceTo>Vehicle_Receiving_Info__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>