unpackaged/main/default/objects/Opportunity/fields/Vehicle_Sales_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sales_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Sales  Inventory</label>
    <referenceTo>ETM_Sales_Vehicle_Inventory__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>