unpackaged/main/default/objects/Opportunity/fields/Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>