unpackaged/main/default/objects/Opportunity/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>