unpackaged/main/default/objects/Opportunity/fields/Workshop_Location__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Workshop Location for service request</description>
    <label>Workshop Location</label>
    <referenceTo>CICO_Workshop_Location__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>