unpackaged/main/default/objects/Opportunity/recordTypes/Al_Wataneya_Sell_a_Car.recordType-meta.xml
<RecordType>
    <fullName>Al_Wataneya_Sell_a_Car</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Al Wataneya-Sell a Car</label>
</RecordType>