unpackaged/main/default/objects/Opportunity/recordTypes/Automotive_Dealership_Veh_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Automotive_Dealership_Veh_Purchase</fullName>
    <active>true</active>
    <businessProcess>Automotive Dealership - Vehicle Purchase</businessProcess>
    <label>Emirates Moto Dealership - Sell a Car</label>
</RecordType>