unpackaged/main/default/objects/Opportunity/recordTypes/Automotive_Dealership_Vehicle_Inquiry_Trade_In.recordType-meta.xml
<RecordType>
    <fullName>Automotive_Dealership_Vehicle_Inquiry_Trade_In</fullName>
    <active>true</active>
    <businessProcess>Automotive Dealership - Vehicle Inquiry%2FTrade-In</businessProcess>
    <label>Emirates Moto Dealership - Buy a Car</label>
</RecordType>