unpackaged/main/default/objects/Opportunity/recordTypes/Automotive_Service_CenterBodyShop.recordType-meta.xml
<RecordType>
    <fullName>Automotive_Service_CenterBodyShop</fullName>
    <active>true</active>
    <businessProcess>Automotive Service Center %26 Body Shop</businessProcess>
    <label>Automotive Service Center &amp; Body Shop</label>
</RecordType>