unpackaged/main/default/objects/Opportunity/recordTypes/Closed_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Closed_Opportunity</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <description>to lock the record the for closing</description>
    <label>Closed Opportunity</label>
</RecordType>