unpackaged/main/default/objects/Opportunity/recordTypes/ET_Sales_opportunity.recordType-meta.xml
<RecordType>
    <fullName>ET_Sales_opportunity</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Sales opportunity</label>
</RecordType>