unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Auction_Center.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Auction_Center</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Auction Center</label>
</RecordType>