unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Body_shop.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Body_shop</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Body shop</label>
</RecordType>