unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Bus_Furbished_Unit.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Bus_Furbished_Unit</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Bus Furbished Unit</label>
</RecordType>