unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Chauffeur_and_Limousine_B2B.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Chauffeur_and_Limousine_B2B</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Chauffeur and Limousine -B2B</label>
</RecordType>