unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_CNG.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_CNG</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>CNG</label>
</RecordType>