unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Driving_School_B2B.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Driving_School_B2B</fullName>
    <active>true</active>
    <businessProcess>Driving School- B2B</businessProcess>
    <label>Driving School- B2B</label>
</RecordType>