unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Dry_Wash_Unit.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Dry_Wash_Unit</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Dry Wash Unit</label>
</RecordType>