unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_ET_Tyre.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_ET_Tyre</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>ET Tyre</label>
</RecordType>