unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Inspection_B2B.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Inspection_B2B</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Inspection -B2B</label>
</RecordType>