unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Leasing.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Leasing</fullName>
    <active>true</active>
    <businessProcess>LeaseTransportManpower</businessProcess>
    <label>Leasing/ Rental</label>
</RecordType>