unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Logistics.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Logistics</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Logistics</label>
</RecordType>