unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Maintainance.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Maintainance</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Maintainance</label>
</RecordType>