unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Manpower.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Manpower</fullName>
    <active>true</active>
    <businessProcess>LeaseTransportManpower</businessProcess>
    <label>Manpower</label>
</RecordType>