unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_RSA_B2B.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_RSA_B2B</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>RSA - B2B</label>
</RecordType>