unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Transportation.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Transportation</fullName>
    <active>true</active>
    <businessProcess>LeaseTransportManpower</businessProcess>
    <label>Transportation</label>
</RecordType>