unpackaged/main/default/objects/Opportunity/recordTypes/ETSALES_Weighing_Centre.recordType-meta.xml
<RecordType>
    <fullName>ETSALES_Weighing_Centre</fullName>
    <active>true</active>
    <businessProcess>ET Sales</businessProcess>
    <label>Weighing Centre</label>
</RecordType>