unpackaged/main/default/objects/Opportunity/recordTypes/ETT_Tyre_Cash_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Cash_Supplier</fullName>
    <active>true</active>
    <businessProcess>ETT_Cash Tyre Supplier</businessProcess>
    <label>Tyre - Cash Supplier</label>
</RecordType>