unpackaged/main/default/objects/Opportunity/recordTypes/ETT_Tyre_Credit_B2B_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Credit_B2B_Supplier</fullName>
    <active>true</active>
    <businessProcess>ETT_Credit%2FB2B Tyre Supplier</businessProcess>
    <label>Tyre - Credit/B2B Supplier</label>
</RecordType>