unpackaged/main/default/objects/Opportunity/recordTypes/ETT_Tyre_Internal.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Internal</fullName>
    <active>true</active>
    <businessProcess>ETT Tyre Internal</businessProcess>
    <label>Tyre Internal</label>
</RecordType>