unpackaged/main/default/objects/Opportunity/recordTypes/ETT_Tyre_Internal_Private.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Internal_Private</fullName>
    <active>true</active>
    <businessProcess>ETT Tyre Internal Private</businessProcess>
    <label>Tyre Internal Private</label>
</RecordType>