unpackaged/main/default/objects/Opportunity/recordTypes/ETT_Tyre_Refurbished_Sales.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Refurbished_Sales</fullName>
    <active>true</active>
    <businessProcess>ETT_Refurbished Tyre Sales</businessProcess>
    <label>Tyre Refurbished Sales</label>
</RecordType>