unpackaged/main/default/objects/Opportunity/recordTypes/ETT_Tyre_Refurbishing_Services.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Refurbishing_Services</fullName>
    <active>true</active>
    <businessProcess>ETT_Tyre Refurbishing Services</businessProcess>
    <label>Tyre Refurbishing Services</label>
</RecordType>