unpackaged/main/default/objects/Opportunity/recordTypes/Tyre_Cash_Individual.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Cash_Individual</fullName>
    <active>true</active>
    <businessProcess>ETT_Cash Tyre Supplier</businessProcess>
    <label>Tyre - Cash Individual</label>
</RecordType>