unpackaged/main/default/objects/Opportunity/recordTypes/Tyre_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Supplier</fullName>
    <active>true</active>
    <businessProcess>Tyre Supplier</businessProcess>
    <label>Tyre Supplier</label>
</RecordType>