unpackaged/main/default/objects/Opportunity/validationRules/Account_Fileds_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Fileds_Mandatory</fullName>
    <active>true</active>
    <description>Payment Terms,Industry, Emirates, Phone and Company Email</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName,&quot;Legal Contract&quot;),
OR(
$RecordType.Name = &quot;Leasing&quot;,
$RecordType.Name = &quot;Manpower&quot;,
$RecordType.Name = &quot;Transportation&quot;,
$RecordType.Name = &quot;Logistics&quot;,
$RecordType.Name = &quot;Rental -B2B&quot;,
$RecordType.Name = &quot;Maintainance&quot;,
$RecordType.Name = &quot;Chauffeur and Limousine -B2B&quot;
),
OR( 
ISBLANK (Text(Account.ETSALES_Payment_Terms__c)),
ISBLANK (Text( Account.Industry)),
ISBLANK (Text( Account.ETI_Emirates__c)),
ISBLANK( Account.Phone),
ISBLANK( Account.ETSALES_Company_Email__c)
)
)</errorConditionFormula>
    <errorMessage>Payment terms, Industry, Emirates, Phone and Company Email are mandatory in Opportunity Account.</errorMessage>
</ValidationRule>