unpackaged/main/default/objects/Opportunity/validationRules/Account_Trade_Tax_DetailsMandatory_Part1.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Trade_Tax_DetailsMandatory_Part1</fullName>
    <active>true</active>
    <description>Individual,Private,Semi Govt.</description>
    <errorConditionFormula>AND(
OR
(
ISPICKVAL(StageName,&quot;Closed Won&quot;),
ISPICKVAL(StageName ,&quot;Sales Agreement&quot;)
),
OR(
$RecordType.Name = &quot;Leasing&quot;,
$RecordType.Name = &quot;Manpower&quot;,
$RecordType.Name = &quot;Transportation&quot;,
$RecordType.Name = &quot;Logistics&quot;,
$RecordType.Name = &quot;Rental -B2B&quot;,
$RecordType.Name = &quot;Maintainance&quot;,
$RecordType.Name = &quot;Chauffeur and Limousine -B2B&quot;
),
OR(
ISPICKVAL(Account.ETSALES_Profile_Class__c,&quot;Individual&quot;),
ISPICKVAL(Account.ETSALES_Profile_Class__c,&quot;Private&quot;),
ISPICKVAL(Account.ETSALES_Profile_Class__c,&quot;Semi Government&quot;)),

OR(
ISBLANK( Account.ETSALES_Trade_License_Number__c),
ISBLANK( Account.ETSALES_Trade_License_Expiry_Date__c),
ISBLANK( Account.ETSALES_TaxRegistrationNo__c )
)
)</errorConditionFormula>
    <errorMessage>Trade License Number, Trade License Expiry Date, Tax Registration  Number are mandatory in Opportunity Account.</errorMessage>
</ValidationRule>