unpackaged/main/default/objects/Opportunity/validationRules/Agreement_Section_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_Section_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(StageName,&quot;Closed Won&quot;),
ISPICKVAL(StageName,&quot;Sales Agreement&quot;)),
OR(
$RecordType.Name = &quot;Leasing&quot;,
$RecordType.Name = &quot;Manpower&quot;,
$RecordType.Name = &quot;Transportation&quot;,
$RecordType.Name = &quot;Logistics&quot;,
$RecordType.Name = &quot;Maintainance&quot;,
$RecordType.Name = &quot;Rental -B2B&quot;
),
OR(
ISBLANK(ETSALES_Quotation_Ref_No__c),
ISBLANK(ETSALES_Sales_Agreement_Number__c),
ISBLANK(ETSALES_Customer_PO_Number__c ),
ISBLANK(TEXT(Mobilization_Date__c)),
ISBLANK(TEXT(Agreement_Sign_Date__c)),
ISBLANK(TEXT(ETSALES_Quotation_Date__c)),
ISBLANK(TEXT(Awarded_Date__c)),
ISBLANK(TEXT(Contract_Start_Date__c)),
ISBLANK(TEXT(Contract_End_Date__c)),
ISBLANk(Amount)

)
)</errorConditionFormula>
    <errorMessage>All the fields in the Agreement Section and Amount are mandatory.</errorMessage>
</ValidationRule>