unpackaged/main/default/objects/Opportunity/validationRules/Amount_previous_contract_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_previous_contract_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Type, &#39;Renewal Business&#39;),

OR(
 ISPICKVAL( StageName , &#39;Requirement Analysis&#39;),
 ISPICKVAL( StageName , &#39;Decision&#39;),
 ISPICKVAL( StageName , &#39;Pricing Request&#39;),
 ISPICKVAL( StageName , &#39;Proposal&#39;),
 ISPICKVAL( StageName , &#39;Negotiation&#39;),
 ISPICKVAL( StageName , &#39;Legal Contract&#39;),
 ISPICKVAL( StageName , &#39;Sales Agreement&#39;),
 ISPICKVAL( StageName , &#39;Closed Won&#39;),
 ISPICKVAL( StageName , &#39;Closed Lost&#39;)
),
 OR(
$RecordType.Name = &quot;Leasing&quot;,
$RecordType.Name = &quot;Manpower&quot;,
$RecordType.Name = &quot;Transportation&quot;,
$RecordType.Name = &quot;Logistics&quot;,
$RecordType.Name = &quot;Rental -B2B&quot;,
$RecordType.Name = &quot;Maintainance&quot;,
$RecordType.Name = &quot;Chauffeur and Limousine -B2B&quot;
),
 OR(
  ISBLANK( Amount_Previous_Contract__c )
 )
)</errorConditionFormula>
    <errorMessage>Price Information : Amount (previous contract) is mandatory.</errorMessage>
</ValidationRule>