unpackaged/main/default/objects/Opportunity/validationRules/Amount_Restrict_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Restrict_Edit</fullName>
    <active>true</active>
    <description>Restrict editing previous contract details when opportunity type equals Growth Business or New Business</description>
    <errorConditionFormula>AND( 
OR(
$RecordType.Name = &quot;Leasing&quot;,
$RecordType.Name = &quot;Manpower&quot;,
$RecordType.Name = &quot;Transportation&quot;,
$RecordType.Name = &quot;Logistics&quot;,
$RecordType.Name = &quot;Rental -B2B&quot;,
$RecordType.Name = &quot;Maintainance&quot;,
$RecordType.Name = &quot;Chauffeur and Limousine -B2B&quot;
),
OR
( ISPICKVAL( Type , &#39;Growth Business&#39;) ,ISPICKVAL( Type , &#39;New Business&#39;)) , ISCHANGED( Amount_Previous_Contract__c ) )</errorConditionFormula>
    <errorDisplayField>Amount_Previous_Contract__c</errorDisplayField>
    <errorMessage>Previous Contract Details can be edited in Renewal Business only</errorMessage>
</ValidationRule>