unpackaged/main/default/objects/Opportunity/validationRules/Avoide_to_cretae_new_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Avoide_to_cretae_new_Opportunity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  AccountId = PRIORVALUE( AccountId ),
  ISPICKVAL(StageName, &quot;Closed Won&quot;),
  ISPICKVAL(Type, &quot;New Business&quot;)
)</errorConditionFormula>
    <errorMessage>New Business&#39; already exists for this account. Please update the existing opportunity instead of creating a new one</errorMessage>
</ValidationRule>