unpackaged/main/default/objects/Opportunity/validationRules/BiddingType_Tender_Required_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>BiddingType_Tender_Required_NotEmpty</fullName>
    <active>true</active>
    <description>Tender must be selected once Bidding Type is selected as &quot;Public Tender&quot;</description>
    <errorConditionFormula>AND(
ISPICKVAL( ETSALES_Bidding_Type__c, &quot;Public Tender&quot; ),
ISBLANK(ETSALES_Tender__c)
)</errorConditionFormula>
    <errorDisplayField>ETSALES_Tender__c</errorDisplayField>
    <errorMessage>Please add Tender details</errorMessage>
</ValidationRule>